# tms-engine

./: .gitignore  Makefile  README.md  dprint.json  go.mod
cmd/cli/: main.go
cmd/wasm/: main.go
internal/engine/: engine.go  models.go
internal/graph/: graph.go  shortestpath.go
internal/kinematics/: ConstantAcceleration.go  MotionModel.go
internal/service/: service.go
pytms/: LICENSE  README.md  dprint.json  pyproject.toml
pytms/src/pytms/: __init__.py  models.py  network.py  results.py  runner.py
pytms/tests/: test_e2e.py  test_models.py  test_network.py  test_runner.py
